fixed the scroll and overflow hopefully.

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -162,9 +162,9 @@ footer{
     
     /* Styling the displayed link to fit into the content area */
     iframe{
-        height: 100%;
-        width: 100%; 
+        height: 430px;
+         width: 100%; 
          -webkit-overflow: touch; 
-        overflow:auto;
+        overflow:scroll;
     }
 }
